# reversi-game

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  elo_rating.py  game_logic.py  game_modes.py  pyproject.toml  requirements.txt
__pycache__/: game_logic.array_njit_get_all_reversed_fields-85.py311.1.nbc  game_logic.array_njit_get_all_reversed_fields-85.py311.nbi  game_logic.array_njit_get_all_reversed_fields-86.py311.1.nbc  game_logic.array_njit_get_all_reversed_fields-86.py311.nbi  game_logic.array_njit_get_all_reversed_fields-87.py311.1.nbc  game_logic.array_njit_get_all_reversed_fields-87.py311.nbi  game_logic.create_tuple_array-43.py311.1.nbc  game_logic.create_tuple_array-43.py311.2.nbc  game_logic.create_tuple_array-43.py311.nbi  game_logic.njit_check_empty_edge_fields-8.py311.1.nbc  game_logic.njit_check_empty_edge_fields-8.py311.nbi  game_logic.njit_check_empty_edge_fields-9.py311.1.nbc  game_logic.njit_check_empty_edge_fields-9.py311.nbi  game_logic.njit_get_all_reversed_fields-10.py311.1.nbc  game_logic.njit_get_all_reversed_fields-10.py311.nbi  game_logic.njit_get_all_reversed_fields-23.py311.1.nbc  game_logic.njit_get_all_reversed_fields-23.py311.10.nbc  game_logic.njit_get_all_reversed_fields-23.py311.11.nbc  game_logic.njit_get_all_reversed_fields-23.py311.12.nbc  game_logic.njit_get_all_reversed_fields-23.py311.13.nbc  game_logic.njit_get_all_reversed_fields-23.py311.14.nbc  game_logic.njit_get_all_reversed_fields-23.py311.15.nbc  game_logic.njit_get_all_reversed_fields-23.py311.16.nbc  game_logic.njit_get_all_reversed_fields-23.py311.17.nbc  (+41 more)
(+966 files in other folders)
