[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reversi_game"
version = "0.1.0"
description = "Othello game engine with AI and heuristics"
authors = [
  { name="Rasa", email="pantrasa@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
		"stable-baselines3==2.0.0", 
		"sb3-contrib==2.0.0",
		"numba==0.56.4",
		"numpy==1.23.3",
 		"torch==1.13.1",
		"pygame==2.1.2",
		"tqdm==4.64.1",
		"seaborn"]

[tool.setuptools.packages.find]
where = ["src"]